[package]
name = "ontosim"
version = "0.1.0"
authors = ["Seth Hodgson <seth.hodgson@outlook.com>"]
edition = "2024"
description = "Structural and semantic similarity comparison of ontology trees"
license = "MIT"
repository = "https://github.com/sehod/ontosim-rs"
readme = "README.md"
keywords = ["ontology", "similarity", "tree-matching", "alignment", "semantic-similarity"]
categories = ["algorithms"]

[dependencies]
